add product and cart

--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -9,6 +9,10 @@
     gap: 45px;
     margin: 100px 50px;
 }
+.cart-container{
+    background-color: rgb(255, 255, 255);
+    padding: 10px;
+}
 
 @media screen and (max-width:1250px){
     .product-container{
