--- a/src/Components/Cart/Cart.css
+++ b/src/Components/Cart/Cart.css
@@ -1,6 +1,10 @@
 .cart{
     display: flex;
     align-items: center;
+    background-color: aquamarine;
+    padding-left: 5px;
+    margin-bottom: 10px;
+    border-radius: 10px;
 }
 .cart img{
    height: 40px;
