--- a/src/Components/Shop/Shop.css
+++ b/src/Components/Shop/Shop.css
@@ -13,6 +13,15 @@
     background-color: rgb(255, 255, 255);
     padding: 10px;
 }
+.cart-container button{
+    background-color: rgb(36, 36, 230);
+    color: rgb(255, 255, 255);
+    padding: 5px;
+    font-weight: 500;
+}
+.find-btn{
+    margin-right: 10px;
+}
 
 @media screen and (max-width:1250px){
     .product-container{
